Completed 007.3 and 007.4
